--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.560.0",
     "next": "16.0.8",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "18.2.45",
+    "@types/react-dom": "18.2.18",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
     "tailwindcss": "^4",
