fix: correct vercel.json runtime version

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
   "functions": {
-    "api/index.js": {
-      "runtime": "nodejs20.x"
-    },
     "build/index.js": {
-      "runtime": "nodejs20.x"
+      "runtime": "node@20.x"
     }
   }
 }
