--- a/package.json
+++ b/package.json
@@ -4,14 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "remix build",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
-    "@remix-run/dev": "2.5.1",
-    "@remix-run/node": "2.5.1",
-    "@remix-run/react": "2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.560.0",
