--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
-    "api/*.js": {
-      "runtime": "node@20.x"
+    "api/**/*.js": {
+      "runtime": "nodejs20.x"
     }
   }
 }
